== 1.0.5 / 2008-12-
* A failure of the check test now passes all test stati (as not_executed). This will not skew statistics that show the trends on test numbers
* Setup and teardown are no longer executed for check tests
* fixed bug in element_prompt where a negative answer would not set an error
== 1.0.4 / 2008-11-7
* Added functionality that allows ignoring the result of a step. The step is considered always successful
== 1.0.3 / 2008-10-28
* The name of the configuration file is added in the context information - can be used to group results together in cases where there are multiple configurations
* Context is now stored as a Hash
* EmailReporter now displays a footer as defined in it's configuration
== 1.0.2 / 2008-10-23
* Bugfix in ActiveRecordReporter: \000 sequences produce exceptions when inserting.
* Output and error from commands is now more strictly sanitized.
== 1.0.1 / 2008-10-13
* rutema_upgrader - Bug: update not performed - fixed
== 1.0.0 / 2008-10-06
* DB schema change: title and description added to scenario table
* footer parameter for the email reporter
* Specification titles included in the text reports
* When parsing multiple specifications a duplicate name will now generate a parser error
* rutema_updater upgrades existing databases, check http://patir.rubyforge.org/rutema/update_090_to_100.html
* rutemah scrapped
* rutemax logs it's version always
* activerecord 2.1.1 is now in use

== 0.9.3 / 2008-09-10
* Sorted result summaries in the text and the email reporter
* ActiveRecordReporter registration logging
== 0.9.2 / 2008-09-10
* Fixed major blunder with test reporting
* Added text reporter for consistent text summaries
* More tests
* Fixed check test behaviour (was not running even when specified in the configuration)
* Fixed bungled emailing when using multiple addresses in the config
== 0.9.1 / 2008-09-09
* Modularisation of element parsing methods introduced. 
* MinimalXMLParser refactored as example.