@@ -25,17 +25,36 @@ module Rutema
       msg<<"\n---"
       #Report on scenarios
       msg<<"\nNo scenarios in this run" if runner_states.empty?
-      msg<<"\nOne scenario in the current run:" if runner_states.size==1
-      msg<<"\n#{runner_states.size} scenarios in the current run:" if runner_states.size>1
-      rstates=runner_states.sort_by do |state| 
-        state.sequence_id.to_i
-      end
-      rstates.each do |state|
+      msg<<"\nOne scenario in the current run" if runner_states.size==1
+      msg<<"\n#{runner_states.size} scenarios in the current run" if runner_states.size>1
+      not_run = runner_states.select{|state| state.status == :not_executed }.sort_by {|state| state.sequence_id.to_i}
+      errors = runner_states.select{|state| state.status == :error }.sort_by {|state| state.sequence_id.to_i}
+      warnings = runner_states.select{|state| state.status == :warning }.sort_by {|state| state.sequence_id.to_i}
+      successes = runner_states.select{|state| state.status == :success }.sort_by {|state| state.sequence_id.to_i}
+      msg<<"\n#{errors.size} errors, #{warnings.size} warnings, #{successes.size} successes"
+      msg<<"\nErrors:" unless errors.empty?
+      msg<<scenario_summaries(errors,specifications)
+      msg<<"\nWarnings:" unless warnings.empty?
+      msg<<scenario_summaries(warnings,specifications)
+      msg<<"\nNot executed:" unless not_run.empty?
+      not_run.each do |state|
         msg<<"\n#{specifications[state.sequence_name].title}" if specifications[state.sequence_name]
-        msg<<"\n#{state.summary}\n---"
+      end
+      msg<<"\nSuccesses:" unless successes.empty?
+      msg<<scenario_summaries(successes,specifications)
+      
+      return msg
+    end
+    
+    def scenario_summaries scenarios,specifications
+      msg=""
+      unless scenarios.empty?
+        scenarios.each do |state|
+          msg<<"\n#{specifications[state.sequence_name].title}" if specifications[state.sequence_name]
+          msg<<"\n#{state.summary}\n---"
+        end
       end
       return msg
     end
   end
-  
 end
